discussion/kv_engine/172221/172221_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51413: Create MockCouchKVStore in replaceCouchKVStore

It's test code so the greater flexibility is useful.

Change-Id: Ib76d1c35b85db9d9e725b2fde6bbd11f42824ae1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-03-21 09:58:27.000000000
Message: 
Uploaded patch set 6: Patch Set 5 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-03-21 10:05:59.000000000
Message: 
Hashtag added: 7.1.1
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-21 10:45:42.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16091/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16091/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16091/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44553/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [128/159]: test add with item_eviction...(92 ms) OK


99% tests passed, 1 tests failed out of 432

Total Test time (real) = 764.83 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44553/ )

Timeout of a CTest test 432/432 Test #284: ep_testsuite.full_eviction.comp_active ........................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44553/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37506/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15018/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5748/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17859/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18181/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18893/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5806/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16935/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26266/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-21 11:15:36.000000000
Message: 
Patch Set 6:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16091/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16091/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16091/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44558/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [21/93]: test producer stream request (full merged snapshots)...(251 ms) OK


99% tests passed, 1 tests failed out of 432

Total Test time (real) = 370.77 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44558/ )

Timeout of a CTest test 432/432 Test #304: ep_testsuite_dcp.full_eviction.magma ..........................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44558/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37506/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15018/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5748/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17859/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18181/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18893/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5806/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16935/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26266/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-21 11:32:51.000000000
Message: 
Patch Set 6:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16091/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16091/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16091/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37506/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15018/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5748/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17859/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18181/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18893/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5806/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16935/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26266/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44560/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-03-21 12:26:43.000000000
Message: 
Patch Set 6: Verified+1

(1 comment)
File Comment: /PATCHSET_LEVEL -> overriding clang tidy issue MB-46631
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-03-21 12:26:45.000000000
Message: 
Removed Verified-1 by <GERRIT_ACCOUNT_1000011>

----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-03-21 12:26:47.000000000
Message: 
Removed Code-Review-1 by <GERRIT_ACCOUNT_1000011>

----------------------------------------------------------------------------------------------------------------------
